src/style/style.css
/* ... */
.logo-container img{
    height: 36px;
    width: 36px;
}

nav{
    display: flex;
    margin-right: 153px;
    gap: 37px;
    align-items: center;
}

nav a {
    color: var(--main-color-text);
    font-size: 16px;
}
input[type=checkbox]{
    display: none;
}

/*HAMBURGER MENU*/
.hamburger {
    display: none;
    font-size: 30px;
    user-select: none;
}

.acess-container{
    display: flex;
    gap: 30px;
    font-size: 16px;
    margin-left: 50px;
    
}

button{
    background-color: transparent;
    font-weight: 500;
    width: 50px;
}
button:hover{
    cursor: pointer;
}

.acess-container :last-child{
    border-radius: 50px;
    border: 1px solid var(--main-color);
    width: 150px;
    height: 45px;
    color: var(--main-color);
    /* padding: 13px 45px; */
    font-weight: 500;
}

/* PRIMEIRA SEÇÃO*/

.about-container{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 89px;
    gap: 41px;
}

.section-content{
    width: 555px;
}

.section-content h2{
    font-size: 50px;
    font-weight: 400;
    margin-top: 28px;
}

.section-content p{
    font-size: 16px;
    margin-top: 20px;
}

.section-content button{
    border-radius: 10px;
    width: 250px;
    height: 60px;
    background-color: var(--main-color);
    color: var(--text-color-button);
    margin-top: 50px;
    font-size: 16px;
    font-weight: 700;
    box-shadow: 0px 20px 40px var(--shadow-button-color);

}

/* SEGUNDA SEÇÃO*/

.info-container{
    margin-top: 103px;
    display: flex;
    justify-content: center;
}

.card-info{
    width: 1140px;
    height: 200px;
    display: flex;
    /* flex-direction: row; */
    justify-content: space-around;
    align-items: center;
    border-radius: 10px;
    box-shadow: 0px 10px 20px #00000017;
}

.card-info p{
    font-size: 20px;
    color: var(--main-color-text);
}

.card-info p strong{
    font-size: 25px;
    color: var(--text-color-titles);
}

.card-info img{
    padding-right: 37px;
    padding-left: 91px;
}

.line{
    height: 126px;
    border: 2px solid #EEEFF2;
}

.info{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column; 
    padding-right: 130px;
}

/* TERCEIRA SEÇÃO*/
.features-container{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 169px;
    margin-top: 96px;
}

.features-content{
    width: 430px;
}

.features-content h2{
    font-size: 35px;
    color: var(--text-color-titles);
    font-weight: 500;
    margin-top: 54px;
    /* padding-bottom: 20px; */
}

.features-content p{
    color: var(--main-color-text);
    font-size: 16px;
    padding: 20px 0;
}

.features-vantages{
    display: flex;
    font-size: 14px;
    align-items: center;
    /* padding: 15px 0; */
}
.features-vantages p{
    font-size: 14px;
   
}

/* QUARTA SEÇÃO*/

.price-container{
    display: flex;
    /* align-items: center; */
    justify-content: center; 
    margin-top: 80px;
    flex-direction: column;
    align-items: center;
    /* text-align: center;*/
}

.price-container h2{
    font-size: 35px;
    color: var(--text-color-titles);
    margin-bottom: 20px;
}

.price-container p{
    font-size: 16px;
    color: var(--main-color-text);
    max-width: 555px;
    text-align: center;
    line-height: 30px;;
}

.cards-price-content{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 50px;
    margin-top: 60px;
    align-items: stretch;
}

.card-price{
    display: flex;
    border: 2px solid var(--border-color);
    border-radius: 10px;
    flex-direction: column;
    justify-content: space-between;
    width: 330px;
    padding: 60px;
    padding-bottom: 30px;
    text-align: center;
}

.card-price p{
    color: var(--main-color-text);
    font-size: 14px;
}

.card-price h4{
    color: var(--text-color-titles);
    font-size: 18px;
    padding-top: 30px;
    padding-bottom: 30px;
    text-align: center;
}

.card-price h3 span{
    color: var(--main-color-text);
    font-weight: 400;
}

.card-price h3{
    font-size: 25px;
    color: var(--text-color-titles);
    text-align: center;
    margin-top: 50px;
}

.card-price:hover{
    border: 2px solid var(--main-color);
}

.card-price button{
    border: 2px solid var(--main-color);
    border-radius: 50px;
    color: var(--main-color);
    font-weight: 700;
    font-size: 16px;
    width: 178px;
    padding: 13px;
    margin-top: 20px;
}

.card-price button:hover{
    background-color: var(--main-color);
    border-radius: 50px;
    color: var(--text-color-button);
    box-shadow: 0px 20px 40px var(--shadow-button-color);
}

.price-vantages{
    display: flex;
    font-size: 14px;
    padding: 10px 0;
    gap: 10px
    
}
.price-vantages img{
    height: 24px;
    width: 24px;
    /* padding-left: 20px; */
}

/* QUINTA SEÇÃO*/
.map-container{
    margin-top: 150px;
    display: flex;
    align-items: center;
    flex-direction: column;
    text-align: center;
}

.map-container h2{
    font-size: 35px;
    color: var(--text-color-titles);
    width: 384px;
}

.map-container p, .map-container p strong{
    font-size: 16px;
    color: var(--main-color-text);
    width: 555px;
    padding-top: 20px;
}

/* .map-container img{
    margin-top: 156px;
    width: 1060px;
    height: 538px;
} */

/* .carousel-img img{
    width: 200px;
    height: 209px;
    margin-top: 20px;
    display: inline-block;
    gap: 60px;
} */

#map{
    margin-top: 156px;
    width: 1060px;
    height: 538px;
}

#carousel{
    width: 1136px;
    height: 209px;
    margin-top: 20px;
}

/* SEXTA SEÇÃO*/

.comments-container{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin-top: 50px;
    text-align: center;
}
.comments-container h2{
    color: var(--text-color-titles);
    font-size: 35px;
    width: 448px;
    padding: 20px;
}
.comments-container #text-h2{
    color: var(--main-color-text);
    font-size: 16px;
    width: 555px;
}
/* ... */

